Added basic styling

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,41 @@
 .Weather {
   border: 1px solid rgb(231, 221, 221);
+  font-family: Arial, Helvetica, sans-serif;
+  color: #727171;
+  padding: 16px;
+  border-radius: 4px;
+}
+
+.Weather h1 {
+  font-size: 28px;
+  font-weight: 100;
+  line-height: 29px;
+  margin: 20px 0 0 0;
+}
+.Weather ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+.Weather img {
+  position: relative;
+  margin-bottom: 30px;
+}
+.Weather .temperature {
+  font-size: 62px;
+  line-height: 62px;
+  color: black;
+}
+.Weather .unit {
+  color: black;
+  font-size: 16px;
+  position: relative;
+  top: -30px;
+  margin-left: 5px;
+  line-height: 1;
 }
