--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,7 +2,8 @@
   border: 1px solid rgb(231, 221, 221);
   font-family: Arial, Helvetica, sans-serif;
   color: #727171;
-  padding: 16px;
+  padding: 20px;
+  padding-bottom: 40px;
   border-radius: 4px;
 }
 
@@ -22,21 +23,24 @@
   font-weight: 100;
   line-height: 19px;
 }
-.Weather img {
+.Weather canvas {
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: -10px;
+  top: 10px;
 }
 .Weather .temperature {
   font-size: 62px;
   line-height: 62px;
   color: black;
-  margin-left: -10px;
+  top: 15px;
+  left: 10px;
+  position: relative;
 }
 .Weather .unit {
   color: black;
   font-size: 16px;
   position: relative;
-  top: -32px;
-  margin-left: 5px;
+  top: -18px;
+  margin-left: 10px;
   line-height: 1;
 }
