--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,7 @@
 .Weather {
   border: 1px solid rgb(231, 221, 221);
   font-family: Arial, Helvetica, sans-serif;
-  color: #727171;
+  color: black;
   padding: 20px;
   padding-bottom: 40px;
   border-radius: 4px;
@@ -41,7 +41,6 @@
   font-size: 16px;
   position: relative;
   top: -72px;
-  left: 50px;
-  margin-left: 10px;
+  left: 60px;
   line-height: 1;
 }
