--- a/src/Weather.css
+++ b/src/Weather.css
@@ -5,18 +5,24 @@
   padding: 20px;
   padding-bottom: 40px;
   border-radius: 4px;
+  box-shadow: 5px 5px 10px #a7c8ee;
+  background-image: url("../images/sky.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .Weather h1 {
-  font-size: 28px;
-  font-weight: 100;
+  font-size: 30px;
+  font-weight: 500;
   line-height: 29px;
   margin: 20px 0 0 0;
+  margin-bottom: 10px;
 }
 .Weather ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-bottom: 15px;
 }
 .Weather li {
   font-size: 16px;
