--- a/src/Weather.css
+++ b/src/Weather.css
@@ -35,7 +35,7 @@
   top: 10px;
 }
 .Weather .temperature {
-  font-size: 62px;
+  font-size: 48px;
   line-height: 62px;
   color: black;
   top: -40px;
@@ -47,6 +47,9 @@
   font-size: 16px;
   position: relative;
   top: -72px;
-  left: 60px;
+  left: 70px;
   line-height: 1;
+}
+.WeatherForecast-day {
+  margin-top: 30px;
 }
